Reduce animation time and dimensions to help prevent a calculation overlap that I suspect was affecting Firefox. Performance seems improved on Firefox, without adversely affecting the aesthetics.

--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -124,13 +124,17 @@ body {
   padding-left: 8px;
   -webkit-animation-name: wipe-down;
           animation-name: wipe-down;
+  /* 
   -webkit-animation-duration: 1.95s;
           animation-duration: 1.95s;
+  */
+  -webkit-animation-duration: 1.85s;
+          animation-duration: 1.85s;
   -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
 }
-@-webkit-keyframes wipe-down { from { height: 0px; } to { height: 200px; } }
-@keyframes wipe-down { from { height: 0px; } to { height: 200px; } }
+@-webkit-keyframes wipe-down { from { height: 0px; } to { height: 160px; } }
+@keyframes wipe-down { from { height: 0px; } to { height: 160px; } }
 /*********************/
 
 
